# Qmi

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  skills-lock.json
src/: main.cpp  qmi_actions.cpp  qmi_app.h  qmi_icon.rc.in  qmi_imaging.cpp  qmi_navigation.cpp  qmi_settings.cpp  qmi_settings.h  qmi_utils.cpp  qmi_utils.h  qmi_view.cpp
tools/: png_to_ico.ps1
